[metadata]
name = make_telomre_bed
version = 0.1
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/make_telomre_bed
description = Make a .bed file of telomeres from fasta file
long_description = file: README.md

[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  make_telomre_bed = src
packages =
  make_telomre_bed
install_requires =
  bits
dependency_links =
  git+https://git@github.com/yoshihikosuzuki/bits.git#egg=bits

[options.entry_points]
console_scripts =
  make_telomre_bed = make_telomre_bed.main:main
