[metadata]
name = make_telomere_bed
version = 0.1
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/make_telomere_bed
description = Make a .bed file of telomeres from fasta file
long_description = file: README.md

[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  make_telomere_bed = src
packages =
  make_telomere_bed
install_requires =
  bits
  logzero
dependency_links =
  git+https://git@github.com/yoshihikosuzuki/bits.git#egg=bits

[options.entry_points]
console_scripts =
  make_telomere_bed = make_telomere_bed.main:main
